# Hybrid-Sensitivity-Weighted-Quantization

./: .commitmsg  .gitignore  README.md  __init__.py  do_push.ps1  do_tag.ps1  fp8bench.py  hswq_loader_node.py  pyproject.toml  quantize_sdxl_hswq_v1.1.py  quantize_sdxl_hswq_v1.py  quantize_sdxl_hswq_v2.1_scaled.py  quantize_sdxl_hswq_v2_scaled.py  quantize_zit_hswq_v1.py  verify_fp8_grid.py  weighted_histogram_mse.py
archives/: quantize_sdxl_hswq_v1.py  quantize_sdxl_hswq_v2_scaled.py
md/: HSWQ_ Hybrid Sensitivity Weighted Quantization.md  HSWQ_DualMonitor_Fix_Report.md
sample/: calibration_prompts_128.txt  calibration_prompts_256.txt  calibration_prompts_512.txt
